--- a/package.json
+++ b/package.json
@@ -39,10 +39,11 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "start": "gatsby develop -o",
+    "start": "gatsby develop",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "reset": "rm -rf .cache/ public/",
+    "reset": "gatsby clean",
+    "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
   },
   "devDependencies": {
@@ -57,14 +58,11 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
-    "eslint-plugin-react-hooks": "^1.3.0",
-    "prettier": "^1.19.1"
+    "eslint-plugin-react-hooks": "^1.3.0"
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:smakosh/gatsby-portfolio-dev.git"
-  },
-  "bugs": {
-    "url": "https://github.com/smakosh/gatsby-portfolio-dev/issues"
+    "url": "git@github.com:vstokstad/vilhelmstokstad.com"
   }
+
 }
