--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "portfolio",
   "private": true,
-  "description": "A simple portfolio for developers",
-  "version": "0.1.3",
-  "author": "Smakosh <ismai23l@hotmail.com>",
+  "description": "my umble domain",
+  "version": "0.0.1",
+  "author": "vstokstad <v.stokstad@gmal.com>",
   "dependencies": {
     "@types/webpack": "4.41.25",
     "@typescript-eslint/eslint-plugin": "2.34.0",
@@ -53,11 +53,13 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "start": "gatsby develop",
+    "dev": "gatsby develop",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "reset": "gatsby clean",
     "clean": "gatsby clean",
+    "serve": "gatsby serve",
+    "deploy": "gatsby build && netlify deploy",
     "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
   },
   "devDependencies": {
