--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "portfolio",
   "private": true,
-  "description": "my umble domain",
-  "version": "0.0.1",
+  "description": "my humble domain",
+  "version": "0.0.2",
   "author": "vstokstad <v.stokstad@gmal.com>",
   "dependencies": {
+    "@mikaelkristiansson/domready": "^1.0.10",
+    "@reach/router": "^1.3.4",
     "@types/webpack": "4.41.25",
     "@typescript-eslint/eslint-plugin": "2.34.0",
     "@typescript-eslint/parser": "2.34.0",
@@ -26,6 +28,7 @@
     "gatsby-plugin-sharp": "^2.2.13",
     "gatsby-plugin-sitemap": "^2.0.3",
     "gatsby-plugin-styled-components": "^3.0.4",
+    "gatsby-react-router-scroll": "^3.5.0",
     "gatsby-source-filesystem": "^2.1.35",
     "gatsby-source-graphql": "~2.10.0",
     "gatsby-transformer-sharp": "^2.2.7",
@@ -54,9 +57,6 @@
   "scripts": {
     "build": "gatsby build",
     "dev": "gatsby develop",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "reset": "gatsby clean",
     "clean": "gatsby clean",
     "serve": "gatsby serve",
     "deploy": "gatsby build && netlify deploy",
@@ -66,19 +66,11 @@
     "@apollo/client": "3.2.9",
     "babel-eslint": "^10.1.0",
     "babel-plugin-styled-components": "^1.10.6",
-    "eslint": "^7.14.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-config-wesbos": "1.0.1",
-    "eslint-plugin-html": "^6.1.1",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.12.4",
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "eslint": "^7.14.0"
+
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:vstokstad/vilhelmstokstad.com"
+    "url": "https://github.com/vstokstad/web.git"
   }
 }
