--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.0.2",
   "author": "vstokstad <v.stokstad@gmal.com>",
   "dependencies": {
+    "recaptcha-v3": "^1.9.1",
     "@mikaelkristiansson/domready": "^1.0.10",
     "@reach/router": "^1.3.4",
     "@types/webpack": "4.41.25",
