--- a/package.json
+++ b/package.json
@@ -2,20 +2,22 @@
   "name": "vilhelmstokstad.com",
   "private": true,
   "description": "web - vilhelmstokstad.com",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "author": "vstokstad <v.stokstad@gmal.com>",
   "dependencies": {
-    "recaptcha-v3": "^1.9.1",
     "@mikaelkristiansson/domready": "^1.0.10",
+    "@pittica/gatsby-plugin-recaptcha": "^1.0.1",
     "@reach/router": "^1.3.4",
     "@types/webpack": "4.41.25",
     "@typescript-eslint/eslint-plugin": "2.34.0",
     "@typescript-eslint/parser": "2.34.0",
     "apollo": "^2.31.2",
     "babel-core": "^6.26.3",
+    "body-parser": "^1.19.0",
     "check-peer-dependencies": "^2.0.6",
     "dotenv": "^8.2.0",
     "eslint-plugin-flowtype": "4.7.0",
+    "express": "^4.17.1",
     "formik": "^2.2.5",
     "gatsby": "^2.17.7",
     "gatsby-image": "^2.2.30",
@@ -38,8 +40,9 @@
     "react": "16.14.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "16.14.0",
-    "react-google-recaptcha": "^2.1.0",
+    "react-google-recaptcha-v3": "^1.9.5",
     "react-helmet": "^6.1.0",
+    "request": "^2.88.2",
     "sockjs-client": "1.5.0",
     "styled-components": "^5.2.1",
     "type-fest": "0.13.1",
