updated projects to use MD

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gatsby-plugin-nprogress": "^2.0.7",
     "gatsby-plugin-offline": "^3.0.14",
     "gatsby-plugin-react-helmet": "^3.0.2",
+    "gatsby-plugin-sass": "^4.11.0",
     "gatsby-plugin-sharp": "^2.2.13",
     "gatsby-plugin-sitemap": "^2.0.3",
     "gatsby-plugin-styled-components": "^3.0.4",
@@ -37,6 +38,7 @@
     "gatsby-transformer-remark": "^4.8.0",
     "gatsby-transformer-sharp": "^2.2.7",
     "prettier": "^2.2.1",
+    "process": "^0.11.10",
     "prop-types": "^15.6.2",
     "react": "16.14.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
