--- a/package.json
+++ b/package.json
@@ -22,20 +22,20 @@
     "gatsby": "^2.17.7",
     "gatsby-image": "^2.2.30",
     "gatsby-plugin-canonical-urls": "^2.0.8",
-    "gatsby-plugin-favicon": "3.1.6",
+    "gatsby-plugin-favicon": "^3.1.6",
     "gatsby-plugin-google-analytics": "^2.0.8",
     "gatsby-plugin-manifest": "^2.2.6",
     "gatsby-plugin-nprogress": "^2.0.7",
-    "gatsby-plugin-offline": "^3.0.14",
-    "gatsby-plugin-react-helmet": "^3.0.2",
-    "gatsby-plugin-sass": "^4.11.0",
+    "gatsby-plugin-offline": "^2.2.10",
+    "gatsby-plugin-react-helmet": "^2.0.12-9",
+    "gatsby-plugin-sass": "^2.9.0-next.0",
     "gatsby-plugin-sharp": "^2.2.13",
     "gatsby-plugin-sitemap": "^2.0.3",
-    "gatsby-plugin-styled-components": "^3.0.4",
-    "gatsby-react-router-scroll": "^3.5.0",
-    "gatsby-source-filesystem": "^3.11.0",
+    "gatsby-plugin-styled-components": "3.2.0",
+    "gatsby-react-router-scroll": "^2.3.1",
+    "gatsby-source-filesystem": "^2.11.1",
     "gatsby-source-graphql": "~2.10.0",
-    "gatsby-transformer-remark": "^4.8.0",
+    "gatsby-transformer-remark": "^2.16.1",
     "gatsby-transformer-sharp": "^2.2.7",
     "prettier": "^2.2.1",
     "process": "^0.11.10",
