--- a/package.json
+++ b/package.json
@@ -4,9 +4,6 @@
   "description": "web - vilhelmstokstad.com",
   "version": "0.0.3",
   "author": "vstokstad <v.stokstad@gmal.com>",
-  "engines": {
-    "node": ">=16"
-  },
   "dependencies": {
     "@mikaelkristiansson/domready": "^1.0.10",
     "@pittica/gatsby-plugin-recaptcha": "^1.0.1",
@@ -22,7 +19,7 @@
     "eslint-plugin-flowtype": "4.7.0",
     "express": "^4.17.1",
     "formik": "^2.2.5",
-    "gatsby": "^2.32.13",
+    "gatsby": "^2.17.7",
     "gatsby-image": "^2.2.30",
     "gatsby-plugin-canonical-urls": "^2.0.8",
     "gatsby-plugin-favicon": "^3.1.6",
@@ -37,7 +34,7 @@
     "gatsby-plugin-styled-components": "3.2.0",
     "gatsby-react-router-scroll": "^2.3.1",
     "gatsby-source-filesystem": "^2.11.1",
-    "gatsby-source-graphql": "^4.4.0",
+    "gatsby-source-graphql": "~2.10.0",
     "gatsby-transformer-remark": "^2.16.1",
     "gatsby-transformer-sharp": "^2.2.7",
     "prettier": "^2.2.1",
@@ -69,7 +66,7 @@
     "dev": "gatsby develop",
     "clean": "gatsby clean",
     "serve": "gatsby serve",
-    "deploy": "gatsby build",
+    "deploy": "gatsby build && netlify deploy",
     "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
   },
   "devDependencies": {
