--- a/package.json
+++ b/package.json
@@ -43,11 +43,11 @@
     "react": "16.14.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "16.14.0",
-    "react-google-recaptcha-v3": "^1.9.5",
     "react-helmet": "^6.1.0",
     "request": "^2.88.2",
     "sockjs-client": "1.5.0",
     "styled-components": "^5.2.1",
+    "tachyons": "4.12.0",
     "type-fest": "0.13.1",
     "typescript": "4.1.2",
     "url-loader": "^4.1.1",
