--- a/package.json
+++ b/package.json
@@ -5,55 +5,27 @@
   "version": "0.0.3",
   "author": "vstokstad <v.stokstad@gmal.com>",
   "dependencies": {
-    "@mikaelkristiansson/domready": "^1.0.10",
-    "@pittica/gatsby-plugin-recaptcha": "^1.0.1",
-    "@reach/router": "^1.3.4",
-    "@types/webpack": "4.41.25",
-    "@typescript-eslint/eslint-plugin": "2.34.0",
-    "@typescript-eslint/parser": "2.34.0",
-    "apollo": "^2.31.2",
-    "babel-core": "^6.26.3",
-    "body-parser": "^1.19.0",
-    "check-peer-dependencies": "^2.0.6",
-    "dotenv": "^8.2.0",
-    "eslint-plugin-flowtype": "4.7.0",
-    "express": "^4.17.1",
-    "formik": "^2.2.5",
-    "gatsby": "^2.17.7",
-    "gatsby-image": "^2.2.30",
-    "gatsby-plugin-canonical-urls": "^2.0.8",
-    "gatsby-plugin-favicon": "^3.1.6",
-    "gatsby-plugin-google-analytics": "^2.0.8",
-    "gatsby-plugin-manifest": "^2.2.6",
-    "gatsby-plugin-nprogress": "^2.0.7",
-    "gatsby-plugin-offline": "^2.2.10",
-    "gatsby-plugin-react-helmet": "^2.0.12-9",
-    "gatsby-plugin-sass": "^2.9.0-next.0",
-    "gatsby-plugin-sharp": "^2.2.13",
-    "gatsby-plugin-sitemap": "^2.0.3",
-    "gatsby-plugin-styled-components": "3.2.0",
-    "gatsby-react-router-scroll": "^2.3.1",
-    "gatsby-source-filesystem": "^2.11.1",
-    "gatsby-source-graphql": "~2.10.0",
-    "gatsby-transformer-remark": "^2.16.1",
-    "gatsby-transformer-sharp": "^2.2.7",
-    "prettier": "^2.2.1",
-    "process": "^0.11.10",
+		"axios": "^0.21.1",
+		"dotenv": "^10.0.0",
+		"formik": "^2.1.4",
+		"gatsby": "^3.6.1",
+		"gatsby-plugin-canonical-urls": "^3.6.0",
+		"gatsby-plugin-google-analytics": "^3.6.0",
+		"gatsby-plugin-manifest": "^3.6.0",
+		"gatsby-plugin-nprogress": "^3.6.0",
+		"gatsby-plugin-offline": "^4.6.0",
+		"gatsby-plugin-react-helmet": "^4.6.0",
+		"gatsby-plugin-sitemap": "^4.2.0",
+		"gatsby-plugin-styled-components": "^4.6.0",
+		"gatsby-source-graphql": "^3.6.0",
     "prop-types": "^15.6.2",
-    "react": "16.14.0",
+		"react": "^17.0.2",
     "react-anchor-link-smooth-scroll": "^1.0.12",
-    "react-dom": "16.14.0",
+		"react-dom": "^17.0.2",
+		"react-google-recaptcha": "^2.1.0",
     "react-helmet": "^6.1.0",
-    "request": "^2.88.2",
-    "sockjs-client": "1.5.0",
-    "styled-components": "^5.2.1",
-    "tachyons": "4.12.0",
-    "type-fest": "0.13.1",
-    "typescript": "4.1.2",
-    "url-loader": "^4.1.1",
-    "webpack-plugin-serve": "1.2.1",
-    "yarn": "^1.22.10",
-    "yup": "^0.31.1"
+		"styled-components": "^5.3.0",
+		"yup": "^0.32.9"
   },
   "keywords": [
     "gatsby",
@@ -70,13 +42,18 @@
     "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
   },
   "devDependencies": {
-    "@apollo/client": "3.2.9",
     "babel-eslint": "^10.1.0",
     "babel-plugin-styled-components": "^1.10.6",
-    "eslint": "^7.14.0"
+		"eslint": "^7.27.0"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/vstokstad/web.git"
+  },
+  "resolutions": {
+    "graphql": "^15.4.0",
+    "graphql-compose": "^7.25.0",
+    "webpack": "^5.24.2",
+    "formik/deepmerge": "4.2.2"
   }
 }
