--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,14 @@ logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+#Yarn
+.yarn/*
+!.yarn/cache
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 
 # Runtime data
 pids
