--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vilhelmstokstad.com",
   "private": true,
   "description": "web - vilhelmstokstad.com",
-  "version": "0.0.3",
+  "version": "1.1.0",
   "author": "vstokstad <v.stokstad@gmal.com>",
   "dependencies": {
     "axios": "^0.21.1",
@@ -57,5 +57,6 @@
     "graphql-compose": "^7.25.0",
     "webpack": "^5.24.2",
     "formik/deepmerge": "4.2.2"
-  }
+  },
+  "packageManager": "yarn@3.1.1"
 }
