--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^17.0.2",
     "react-google-recaptcha": "^2.1.0",
     "react-helmet": "^6.1.0",
+    "react-is": "^17.0.2",
     "styled-components": "^5.3.0",
     "yup": "^0.32.9"
   },
@@ -40,10 +41,11 @@
     "dev": "gatsby develop",
     "clean": "gatsby clean",
     "serve": "gatsby serve",
-    "deploy": "gatsby build && netlify deploy",
+    "deploy": "gatsby build",
     "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
   },
   "devDependencies": {
+    "@types/react-is": "^17",
     "babel-eslint": "^10.1.0",
     "babel-plugin-styled-components": "^1.10.6",
     "eslint": "^7.27.0"
