--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "gatsby-plugin-nprogress": "^3.6.0",
     "gatsby-plugin-offline": "^4.6.0",
     "gatsby-plugin-react-helmet": "^4.6.0",
-    "gatsby-plugin-sitemap": "^4.2.0",
+    "gatsby-plugin-sitemap": "^3.3.0",
     "gatsby-plugin-styled-components": "^4.6.0",
-    "gatsby-source-filesystem": "^4.4.0",
+    "gatsby-source-filesystem": "^3.14.0",
     "gatsby-source-graphql": "^3.6.0",
-    "gatsby-transformer-remark": "^5.4.0",
+    "gatsby-transformer-remark": "^3.2.0",
     "prop-types": "^15.6.2",
     "react": "^17.0.2",
     "react-anchor-link-smooth-scroll": "^1.0.12",
@@ -37,7 +37,7 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": "gatsby build",
+    "build": "yarn install --check-cache --inline-builds && gatsby build",
     "dev": "gatsby develop",
     "clean": "gatsby clean",
     "serve": "gatsby serve",
