--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "1.1.0",
   "author": "vstokstad <v.stokstad@gmal.com>",
   "dependencies": {
+    "@deckdeckgo/highlight-code": "^3.6.0",
     "axios": "^0.21.1",
     "dotenv": "^10.0.0",
     "formik": "^2.1.4",
@@ -18,6 +19,7 @@
     "gatsby-plugin-react-helmet": "^4.6.0",
     "gatsby-plugin-sitemap": "^3.3.0",
     "gatsby-plugin-styled-components": "^4.6.0",
+    "gatsby-remark-highlight-code": "^3.2.0",
     "gatsby-source-filesystem": "^3.14.0",
     "gatsby-source-graphql": "^3.6.0",
     "gatsby-transformer-remark": "^3.2.0",
