--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "vstokstad <v.stokstad@gmal.com>",
   "dependencies": {
     "@deckdeckgo/highlight-code": "^3.6.0",
+    "@react-hook/intersection-observer": "^3.1.1",
     "axios": "^0.21.1",
     "dotenv": "^10.0.0",
     "formik": "^2.1.4",
